# scaffold-cpp

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md
bazel/: build_system.bzl
carrot/common/: BUILD.bazel
carrot/event/: BUILD.bazel  command.hh  dispatcher.hh  io_object.hh
docker/: Dockerfile  runenv.sh
exe/gateway/: BUILD.bazel  gateway.cc
include/carrot/common/: BUILD.bazel
include/carrot/event/: BUILD.bazel  command.hh  dispatcher.hh  io_object.hh
patches/googletest/: 0001-import-functions-from-rules_cc.patch
rigtorp/: BUILD.bazel
src/component_a/: BUILD.bazel  component.cpp  component.hh  component_test.cpp
src/core/common/: BUILD.bazel  signal_monitor.cc  signal_monitor.hh
src/core/event/: BUILD.bazel  dispatcher_impl.cc  dispatcher_impl.hh
src/core/io/: BUILD.bazel  chunk.cc  chunk.hh  connection.cc  connection.hh  http_protocol_parser.cc  http_protocol_parser.hh  llhttp_parser.cc  llhttp_parser.hh  protocol_parser.hh  read_buffer.cc  read_buffer.hh  simple_line_protocol_parser.cc  simple_line_protocol_parser.hh  tcp_listener.cc  tcp_listener.hh  write_buffer.cc  write_buffer.hh
src/core/logging/: BUILD.bazel  log.hh  log_frontend.cc  log_frontend.hh  logger.cc  logger.hh
src/exe/gateway/: BUILD.bazel  gateway.cc
src/exe/hello/: BUILD.bazel  hello-world.cc
src/gateway/: BUILD.bazel  application.cc  application.hh
test/: .clang-tidy
test/core/io/: BUILD.bazel  chunk_test.cc  connection_test.cc  protocol_parser_test.cc  read_buffer_test.cc  write_buffer_test.cc
test/core/logging/: BUILD.bazel  log_frontend_test.cc
test/mocks/event/: BUILD.bazel  mocks.hh
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
tools/: build-llvm-project.sh  generate_coverage.sh
