bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0")
single_version_override(
    module_name = "googletest",
    patch_strip = 1,
    patches = ["//patches/googletest:0001-import-functions-from-rules_cc.patch"],
    version = "1.17.0",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    # The current upstream master isn't compatible with bazel v9.0.1
    #remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    #commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/xFile3160/bazel-compile-commands-extractor.git",
)

# Uncomment the lines below if you want the custom clang toolchain be the default.
#register_toolchains(
#    "//toolchain:cc_toolchain_for_linux_x86_64"
#)
