bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0")
single_version_override(
    module_name = "googletest",
    patch_strip = 1,
    patches = ["//patches/googletest:0001-import-functions-from-rules_cc.patch"],
    version = "1.17.0",
)

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    # The current upstream master isn't compatible with bazel v9.0.1
    #remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    #commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/xFile3160/bazel-compile-commands-extractor.git",
)

# Uncomment the lines below if you want the custom clang toolchain be the default.
#register_toolchains(
#    "//toolchain:cc_toolchain_for_linux_x86_64"
#)

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
	visibility = ["//visibility:public"],
)
"""

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "liburing",
    build_file_content = _ALL_CONTENT,
    sha256 = "5f80964108981c6ad979c735f0b4877d5f49914c2a062f8e88282f26bf61de0c",
    strip_prefix = "liburing-liburing-2.14",
    urls = ["https://github.com/axboe/liburing/archive/refs/tags/liburing-2.14.tar.gz"],
)
