load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "component_lib",
    srcs = ["component.cpp"],
    hdrs = ["component.hh"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "component_test",
    size = "small",
    srcs = ["component_test.cpp"],
    deps = [
        ":component_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
