load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "application_lib",
    srcs = ["application.cc"],
    hdrs = ["application.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "//carrot/event:dispatcher_interface",
        "//carrot/event:io_object_interface",
    ],
)
