load("//bazel:build_system.bzl", "carrot_cc_library")

carrot_cc_library(
    name = "application_lib",
    srcs = ["application.cc"],
    hdrs = ["application.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "//include/carrot/event:dispatcher_interface",
        "//include/carrot/event:io_object_interface",
    ],
)
