load("//bazel:build_system.bzl", "carrot_cc_library")

carrot_cc_library(
    name = "signal_monitor_lib",
    srcs = ["signal_monitor.cc"],
    hdrs = ["signal_monitor.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "//include/carrot/event:dispatcher_interface",
        "//include/carrot/event:io_object_interface",
        "//src/core/logging:log_lib",
    ],
)
