load("//bazel:build_system.bzl", "carrot_cc_library")

carrot_cc_library(
    name = "dispatcher_impl_lib",
    srcs = ["dispatcher_impl.cc"],
    hdrs = ["dispatcher_impl.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "//:liburing",
        "//include/carrot/event:dispatcher_interface",
        "//include/carrot/event:io_object_interface",
    ],
)
