load("//bazel:build_system.bzl", "carrot_cc_library")

carrot_cc_library(
    name = "chunk_lib",
    srcs = ["chunk.cc"],
    hdrs = ["chunk.hh"],
)

carrot_cc_library(
    name = "read_buffer_lib",
    srcs = ["read_buffer.cc"],
    hdrs = ["read_buffer.hh"],
    deps = [
        ":chunk_lib",
        "//include/carrot/event:io_object_interface",
        "//src/core/logging:log_lib",
    ],
)

carrot_cc_library(
    name = "write_buffer_lib",
    srcs = ["write_buffer.cc"],
    hdrs = ["write_buffer.hh"],
    deps = [
        ":chunk_lib",
        "//include/carrot/event:io_object_interface",
        "//src/core/logging:log_lib",
    ],
)

carrot_cc_library(
    name = "protocol_parser_lib",
    hdrs = ["protocol_parser.hh"],
)

carrot_cc_library(
    name = "simple_line_protocol_parser_lib",
    srcs = ["simple_line_protocol_parser.cc"],
    hdrs = ["simple_line_protocol_parser.hh"],
    deps = [
        ":protocol_parser_lib",
        "//src/core/logging:log_lib",
    ],
)

carrot_cc_library(
    name = "http_protocol_parser_lib",
    srcs = ["http_protocol_parser.cc"],
    hdrs = ["http_protocol_parser.hh"],
    linkopts = ["-lnghttp2"],
    deps = [
        ":protocol_parser_lib",
        "//src/core/logging:log_lib",
    ],
)

carrot_cc_library(
    name = "connection_lib",
    srcs = ["connection.cc"],
    hdrs = ["connection.hh"],
    deps = [
        ":chunk_lib",
        ":http_protocol_parser_lib",
        ":read_buffer_lib",
        ":write_buffer_lib",
        "//include/carrot/event:dispatcher_interface",
    ],
)

carrot_cc_library(
    name = "tcp_listener_lib",
    srcs = ["tcp_listener.cc"],
    hdrs = ["tcp_listener.hh"],
    visibility = ["//visibility:public"],
    deps = [
        ":connection_lib",
    ],
)
