load("//bazel:build_system.bzl", "carrot_cc_test")

carrot_cc_test(
    name = "chunk_test",
    srcs = ["chunk_test.cc"],
    deps = [
        "//src/core/io:chunk_lib",
        "@googletest//:gtest_main",
    ],
)

carrot_cc_test(
    name = "read_buffer_test",
    srcs = ["read_buffer_test.cc"],
    deps = [
        "//src/core/io:read_buffer_lib",
        "@googletest//:gtest_main",
    ],
)

carrot_cc_test(
    name = "write_buffer_test",
    srcs = ["write_buffer_test.cc"],
    deps = [
        "//src/core/io:write_buffer_lib",
        "@googletest//:gtest_main",
    ],
)

carrot_cc_test(
    name = "connection_test",
    srcs = ["connection_test.cc"],
    deps = [
        "//src/core/io:connection_lib",
        "//test/mocks/event:event_mocks_lib",
        "@googletest//:gtest_main",
    ],
)
